# talkiewalkie

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.h  login.cpp  login.h  main.cpp  talkie.cpp  talkie.h  widget.cpp  widget.h
server/: CMakeLists.txt  frequency.cpp  frequency.h  main.cpp  server.cpp  server.h  users.qrc  widget.cpp  widget.h
